--- a/src/main/resources/templates/calculation.html
+++ b/src/main/resources/templates/calculation.html
@@ -23,15 +23,24 @@
             <td align="right">Стоимость за кв :</td>
             <td><input type="text" th:field="*{costSquareMeter}" placeholder="Стоимость за кв"></td>
         </tr>
-        <tr>
-            <td align="right">Сумма налогов :</td>
-            <td><input type="text" th:field="*{sumTaxes}" placeholder="Сумма налогов"></td>
-        </tr>
+
         <tr>
             <td align="right">ЧЕКБОКС авторский надзор :</td>
-            <td><input type="text" th:field="*{checkBox}" placeholder="ЧЕКБОКС авторский надзор"></td>
+            <td><input type="checkbox" th:field="*{checkBox}" placeholder="ЧЕКБОКС авторский надзор"></td>
         </tr>
-        <tr>
+
+
+
+
+      <!--  <tr>
+            <td align="right">Сумма налогов :</td>
+            <td><input type="text" th:field="*{sumTaxes}" placeholder="Сумма налогов"></td>
+        </tr>-->
+     <!--   <tr>
+            <td align="right">ЧЕКБОКС авторский надзор :</td>
+            <td><input type="text" th:field="*{checkBox}" placeholder="ЧЕКБОКС авторский надзор"></td>
+        </tr>-->
+        <!--<tr>
             <td align="right">- 10% :</td>
             <td><input type="text" th:field="*{remainsTenRate}" placeholder="- 10%"></td>
         </tr>
@@ -45,7 +54,7 @@
             <td align="right">- 20% :</td>
             <td><input type="text" th:field="*{remainsTwentyRate}" placeholder="- 20%"></td>
         </tr>
-
+-->
 
         <tr>
             <p></p>
